--- a/app/src/main/res/layout/timelineview_vertical.xml
+++ b/app/src/main/res/layout/timelineview_vertical.xml
@@ -15,170 +15,196 @@
 
     android:layout_margin="10dp"
     android:orientation="vertical">
-
-    <LinearLayout
-    android:gravity="center_vertical"
-    android:orientation="horizontal"
+<com.google.android.material.card.MaterialCardView
     android:layout_width="match_parent"
-    android:layout_height="100dp">
-    <com.github.vipulasri.timelineview.TimelineView
-
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        app:markerSize="20dp"
-        app:lineWidth="3dp"
-        app:startLineColor="@color/white"
-        app:endLineColor="@color/green"
-        app:lineStyle="normal"/>
-
-   <ImageView
-       android:layout_width="52dp"
-       android:layout_height="52dp"
-       android:src="@drawable/orderplace_icon"
-       android:layout_marginLeft="15dp"
-       android:layout_marginRight="15dp"/>
+    android:layout_height="wrap_content">
 
     <LinearLayout
-        android:orientation="vertical"
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="100dp">
+        <com.github.vipulasri.timelineview.TimelineView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            app:markerSize="20dp"
+            app:lineWidth="3dp"
+            app:startLineColor="@color/white"
+            app:endLineColor="@color/green"
+            app:lineStyle="normal"/>
+
+        <ImageView
+            android:layout_width="52dp"
+            android:layout_height="52dp"
+            android:src="@drawable/orderplace_icon"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"/>
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:textColor="@color/blackTextColor"
+                android:textSize="20dp"
+                android:paddingLeft="20dp"
+                android:text="Order Placed"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+            <TextView
+                android:textSize="15dp"
+                android:paddingLeft="20dp"
+                android:text="We have received your order."
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+    </LinearLayout>
+</com.google.android.material.card.MaterialCardView>
+
+
+    <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-        <TextView
-            android:textColor="@color/blackTextColor"
-            android:textSize="20dp"
-            android:paddingLeft="20dp"
-            android:text="Order Placed"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-        <TextView
-            android:textSize="15dp"
-            android:paddingLeft="20dp"
-            android:text="We have received your order."
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-    </LinearLayout>
-</LinearLayout>
-    <LinearLayout
-        android:gravity="center_vertical"
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="100dp">
-        <com.github.vipulasri.timelineview.TimelineView
-
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            app:markerSize="20dp"
-            app:lineWidth="3dp"
-            app:startLineColor="#4CAF50"
-            app:endLineColor="#4CAF50"
-            app:lineStyle="dash"/>
-        <ImageView
-            android:layout_width="52dp"
-            android:layout_height="52dp"
-            android:src="@drawable/orderconfirm_icon"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"/>
 
         <LinearLayout
-            android:orientation="vertical"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <TextView
-                android:textColor="@color/blackTextColor"
-                android:textSize="20dp"
-                android:paddingLeft="20dp"
-                android:text="Order Confirmed"
+            android:layout_height="100dp">
+            <com.github.vipulasri.timelineview.TimelineView
+
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                app:markerSize="20dp"
+                app:lineWidth="3dp"
+                app:startLineColor="#4CAF50"
+                app:endLineColor="#4CAF50"
+                app:lineStyle="dash"/>
+            <ImageView
+                android:layout_width="52dp"
+                android:layout_height="52dp"
+                android:src="@drawable/orderconfirm_icon"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"/>
+
+            <LinearLayout
+                android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-            <TextView
-                android:textSize="15dp"
-                android:paddingLeft="20dp"
-                android:text="Your order has been confirmed."
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content">
+                <TextView
+                    android:textColor="@color/blackTextColor"
+                    android:textSize="20dp"
+                    android:paddingLeft="20dp"
+                    android:text="Order Confirmed"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+                <TextView
+                    android:textSize="15dp"
+                    android:paddingLeft="20dp"
+                    android:text="Your order has been confirmed."
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+            </LinearLayout>
         </LinearLayout>
-    </LinearLayout>
-    <LinearLayout
-        android:gravity="center_vertical"
-        android:orientation="horizontal"
+    </com.google.android.material.card.MaterialCardView>
+
+    <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
-        android:layout_height="100dp">
-        <com.github.vipulasri.timelineview.TimelineView
-
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            app:markerSize="20dp"
-            app:lineWidth="3dp"
-            app:startLineColor="#4CAF50"
-            app:endLineColor="#4CAF50"
-            app:lineStyle="dash"/>
-
-        <ImageView
-            android:layout_width="52dp"
-            android:layout_height="52dp"
-            android:src="@drawable/orderplace_icon"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"/>
+        android:layout_height="wrap_content">
 
         <LinearLayout
-            android:orientation="vertical"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <TextView
-                android:textColor="@color/blackTextColor"
-                android:textSize="20dp"
-                android:paddingLeft="20dp"
-                android:text="Order On The Way"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-            <TextView
-                android:textSize="15dp"
-                android:paddingLeft="20dp"
-                android:text="Your order is on the way."
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-        </LinearLayout>
-    </LinearLayout>
-    <LinearLayout
-        android:gravity="center_vertical"
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="100dp">
-        <com.github.vipulasri.timelineview.TimelineView
-            android:id="@+id/timeline"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            app:markerSize="20dp"
-            app:lineWidth="3dp"
-            app:startLineColor="#4CAF50"
-            app:endLineColor="#ffff"
-            app:lineStyle="dash"/>
+            android:layout_height="100dp">
+            <com.github.vipulasri.timelineview.TimelineView
 
-        <ImageView
-            android:layout_width="52dp"
-            android:layout_height="52dp"
-            android:src="@drawable/orderplace_icon"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"/>
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                app:markerSize="20dp"
+                app:lineWidth="3dp"
+                app:startLineColor="#4CAF50"
+                app:endLineColor="#4CAF50"
+                app:lineStyle="dash"/>
+
+            <ImageView
+                android:layout_width="52dp"
+                android:layout_height="52dp"
+                android:src="@drawable/orderplace_icon"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"/>
+
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:textColor="@color/blackTextColor"
+                    android:textSize="20dp"
+                    android:paddingLeft="20dp"
+                    android:text="Order On The Way"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+                <TextView
+                    android:textSize="15dp"
+                    android:paddingLeft="20dp"
+                    android:text="Your order is on the way."
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+            </LinearLayout>
+        </LinearLayout>
+    </com.google.android.material.card.MaterialCardView>
+
+    <com.google.android.material.card.MaterialCardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
         <LinearLayout
-            android:orientation="vertical"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <TextView
-                android:textColor="@color/blackTextColor"
-                android:textSize="20dp"
-                android:paddingLeft="20dp"
-                android:text="Order Delivered"
+            android:layout_height="100dp">
+            <com.github.vipulasri.timelineview.TimelineView
+                android:id="@+id/timeline"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                app:markerSize="20dp"
+                app:lineWidth="3dp"
+                app:startLineColor="#4CAF50"
+                app:endLineColor="#ffff"
+                app:lineStyle="dash"/>
+
+            <ImageView
+                android:layout_width="52dp"
+                android:layout_height="52dp"
+                android:src="@drawable/orderplace_icon"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"/>
+
+            <LinearLayout
+                android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-            <TextView
-                android:textSize="15dp"
-                android:paddingLeft="20dp"
-                android:text="Your order has been delivered"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content">
+                <TextView
+                    android:textColor="@color/blackTextColor"
+                    android:textSize="20dp"
+                    android:paddingLeft="20dp"
+                    android:text="Order Delivered"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+                <TextView
+                    android:textSize="15dp"
+                    android:paddingLeft="20dp"
+                    android:text="Your order has been delivered"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+            </LinearLayout>
         </LinearLayout>
-    </LinearLayout>
+    </com.google.android.material.card.MaterialCardView>
+
+
+
+
 </LinearLayout>
 
 </androidx.core.widget.NestedScrollView>
