--- a/app/src/main/res/layout/activity_order_submit_complete.xml
+++ b/app/src/main/res/layout/activity_order_submit_complete.xml
@@ -8,6 +8,14 @@
     tools:context=".OrderSubmitComplete"
     android:id="@+id/show_snacbar_order_confirm">
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -142,4 +150,186 @@
     </LinearLayout>
 
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+
+        android:layout_margin="10dp"
+        android:orientation="vertical">
+
+
+
+
+
+
+        <com.google.android.material.card.MaterialCardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:elevation="10dp">
+
+            <LinearLayout
+                android:gravity="center"
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="70dp">
+                <ImageView
+
+                    android:layout_width="15dp"
+                    android:layout_height="15dp"
+
+                    android:layout_marginLeft="5dp"
+                    android:visibility="visible"
+                    app:srcCompat="@drawable/animated_check" />
+
+                <View
+                    android:layout_width="50dp"
+                    android:layout_height="1px"
+                    android:layout_marginLeft="20px"
+                    android:layout_marginRight="20px"
+                    android:background="#0A0909" />
+                <ImageView
+                    android:layout_width="42dp"
+                    android:layout_height="42dp"
+                    android:src="@drawable/orderconfirm_icon"
+
+                    android:layout_marginRight="5dp"/>
+
+                <LinearLayout
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <TextView
+                        android:textColor="@color/blackTextColor"
+                        android:textSize="16sp"
+                        android:paddingLeft="10dp"
+                        android:text="Order Confirmed"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" />
+                    <TextView
+                        android:textSize="12sp"
+                        android:paddingLeft="10dp"
+                        android:text="Your order has been confirmed."
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" />
+                </LinearLayout>
+            </LinearLayout>
+        </com.google.android.material.card.MaterialCardView>
+
+        <com.google.android.material.card.MaterialCardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:elevation="10dp">
+
+            <LinearLayout
+                android:gravity="center"
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="70dp">
+                <ImageView
+
+                    android:layout_width="15dp"
+                    android:layout_height="15dp"
+
+                    android:layout_marginLeft="5dp"
+                    android:visibility="visible"
+                    app:srcCompat="@drawable/animated_check" />
+
+                <View
+                    android:layout_width="50dp"
+                    android:layout_height="1px"
+                    android:layout_marginLeft="20px"
+                    android:layout_marginRight="20px"
+                    android:background="#0A0909" />
+                <ImageView
+                    android:layout_width="42dp"
+                    android:layout_height="42dp"
+                    android:src="@drawable/foodontheway_icon"
+
+                    android:layout_marginRight="5dp"/>
+
+                <LinearLayout
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <TextView
+                        android:textColor="@color/blackTextColor"
+                        android:textSize="16sp"
+                        android:paddingLeft="10dp"
+                        android:text="Food On The Way"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" />
+                    <TextView
+                        android:textSize="12sp"
+                        android:paddingLeft="10dp"
+                        android:text="Your order is on the way."
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" />
+                </LinearLayout>
+            </LinearLayout>
+        </com.google.android.material.card.MaterialCardView>
+
+        <com.google.android.material.card.MaterialCardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:elevation="10dp">
+
+            <LinearLayout
+                android:gravity="center"
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+
+                android:layout_height="70dp">
+                <ImageView
+
+                    android:layout_width="15dp"
+                    android:layout_height="15dp"
+                    android:layout_marginLeft="5dp"
+
+                    android:visibility="visible"
+                    app:srcCompat="@drawable/animated_check" />
+
+                <View
+                    android:layout_width="50dp"
+                    android:layout_height="1px"
+                    android:layout_marginLeft="20px"
+                    android:layout_marginRight="20px"
+                    android:background="#0A0909" />
+
+                <ImageView
+                    android:layout_width="42dp"
+                    android:layout_height="42dp"
+                    android:src="@drawable/orderdelivered_icon"
+
+                    android:layout_marginRight="5dp"/>
+
+                <LinearLayout
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <TextView
+                        android:textColor="@color/blackTextColor"
+                        android:textSize="16sp"
+                        android:paddingLeft="10dp"
+                        android:text="Order Delivered"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" />
+                    <TextView
+                        android:textSize="12sp"
+                        android:paddingLeft="10dp"
+                        android:text="Your order has been delivered"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" />
+                </LinearLayout>
+            </LinearLayout>
+        </com.google.android.material.card.MaterialCardView>
+
+
+
+
+    </LinearLayout>
+        </LinearLayout>
+    </ScrollView>
 </LinearLayout>
