--- a/app/src/main/res/layout/timelineview_vertical.xml
+++ b/app/src/main/res/layout/timelineview_vertical.xml
@@ -124,7 +124,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
                 <TextView
-                    android:textSize="15dp"
+                    android:textSize="12sp"
                     android:paddingLeft="10dp"
                     android:text="Your order has been confirmed."
                     android:layout_width="match_parent"
