--- a/app/src/main/res/layout/tab_fragment_food_cuisine_search.xml
+++ b/app/src/main/res/layout/tab_fragment_food_cuisine_search.xml
@@ -32,6 +32,7 @@
         android:fontFamily="@font/gothic"
         />
     <TextView
+        android:id="@+id/cuiseIdSearch"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
