--- a/app/src/main/res/layout/activity_search_restaurant.xml
+++ b/app/src/main/res/layout/activity_search_restaurant.xml
@@ -51,7 +51,10 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="2dp"
+  android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="2dp"
+            android:layout_marginBottom="2dp"
             android:gravity="center"
             android:orientation="horizontal"
             android:id="@+id/layout_map_address">
@@ -66,7 +69,7 @@
                 />
             <TextView
                 android:id="@+id/tv_delivery_address"
-                android:layout_width="250dp"
+                android:layout_width="230dp"
                 android:layout_height="wrap_content"
                 android:textSize="13sp"
                 android:layout_margin="10dp"
@@ -82,6 +85,7 @@
                 android:layout_width="20dp"
                 android:layout_height="20dp"
                 android:src="@drawable/ic_forward"
+                android:layout_marginRight="5dp"
                 android:layout_gravity="center"/>
         </LinearLayout>
 
@@ -130,8 +134,8 @@
         android:id="@+id/tv_search_result_for"
         android:layout_width="match_parent"
         android:layout_height="32dp"
-android:layout_marginBottom="10dp"
-android:layout_marginLeft="10dp"
+        android:layout_marginBottom="10dp"
+        android:layout_marginLeft="10dp"
         android:text="Restaurant"
         android:textColor="#4CAF50"
         android:textSize="20sp"
