--- a/app/src/main/res/layout/activity_tab_fragment_recommended.xml
+++ b/app/src/main/res/layout/activity_tab_fragment_recommended.xml
@@ -24,10 +24,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp">
+            android:layout_marginBottom="10dp"
+       >
     <com.smarteist.autoimageslider.SliderLayout
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="240dp"
 android:outlineAmbientShadowColor="@color/white"
         android:id="@+id/FoodAppimageSlider"/>
 
@@ -35,9 +36,9 @@ android:outlineAmbientShadowColor="@color/white"
 
     <GridLayout
         android:layout_width="match_parent"
-        android:layout_height="140dp"
-        android:layout_marginTop="2dp"
-        android:layout_marginBottom="15dp"
+        android:layout_height="180dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
         android:columnCount="2"
         android:columnOrderPreserved="true"
         android:padding="2dp"
@@ -53,22 +54,23 @@ android:outlineAmbientShadowColor="@color/white"
             android:layout_marginBottom="16dp"
             app:cardCornerRadius="8dp"
             android:elevation="8dp"
-            android:padding="10dp"
+            android:padding="15dp"
             android:id="@+id/cv_chinise">
 
             <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:layout_margin="5dp"
                 android:orientation="horizontal">
 
                 <ImageView
                     android:layout_width="50dp"
                     android:layout_height="50dp"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginTop="16dp"
+                    android:layout_gravity="center_vertical"
+
                     android:layout_marginRight="10dp"
-                    android:src="@drawable/chinesefoodicon2" />
+                    android:src="@drawable/chinese_demo_icon" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -97,18 +99,18 @@ android:outlineAmbientShadowColor="@color/white"
             android:id="@+id/cv_fastfood">
 
             <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:layout_margin="5dp"
                 android:orientation="horizontal">
 
                 <ImageView
                     android:layout_width="50dp"
                     android:layout_height="50dp"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginTop="20dp"
+                    android:layout_gravity="center_vertical"
                     android:layout_marginRight="10dp"
-                    android:src="@drawable/fastfoodicon" />
+                    android:src="@drawable/fastfood_demo_icon" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -137,18 +139,19 @@ android:outlineAmbientShadowColor="@color/white"
             android:id="@+id/cv_bangla">
 
             <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:layout_margin="5dp"
                 android:orientation="horizontal">
 
                 <ImageView
                     android:layout_width="50dp"
                     android:layout_height="50dp"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginTop="16dp"
+                    android:layout_gravity="center_vertical"
+
                     android:layout_marginRight="10dp"
-                    android:src="@drawable/biriyaniicon" />
+                    android:src="@drawable/bangla_demo_icon" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -177,18 +180,19 @@ android:outlineAmbientShadowColor="@color/white"
             android:id="@+id/cv_bakery">
 
             <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:layout_margin="5dp"
                 android:orientation="horizontal">
 
                 <ImageView
                     android:layout_width="50dp"
                     android:layout_height="50dp"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginTop="16dp"
+                    android:layout_gravity="center_vertical"
+
                     android:layout_marginRight="10dp"
-                    android:src="@drawable/bakeryicon2" />
+                    android:src="@drawable/bakery_demo_icon" />
 
                 <TextView
                     android:layout_width="wrap_content"
