--- a/app/src/main/res/layout/notification_design.xml
+++ b/app/src/main/res/layout/notification_design.xml
@@ -8,18 +8,18 @@
     <com.google.android.material.card.MaterialCardView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp">
+        android:elevation="10dp"
+        android:layout_margin="10dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
             android:gravity="center">
 
             <ImageView
                 android:id="@+id/notification_image"
-                android:layout_width="80dp"
-                android:layout_height="90dp"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
 
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="10dp"
@@ -54,7 +54,7 @@
                         android:paddingRight="16dp"
                         android:text="Congratulation!!"
                         android:textColor="#4CAF50"
-                        android:textSize="20sp"
+                        android:textSize="18sp"
                         android:textStyle="bold"
                         android:singleLine="true"
                         android:ellipsize="end"
@@ -74,7 +74,7 @@
                     android:layout_marginLeft="5dp"
                     android:padding="5dp"
                     android:text="You have earned 30 points from your order."
-                    android:textSize="13sp" />
+                    android:textSize="12sp" />
 
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -89,7 +89,7 @@
                         android:layout_marginLeft="5dp"
                         android:paddingRight="6dp"
                         android:text="Date :"
-                        android:textSize="15sp"
+                        android:textSize="10sp"
                         android:textStyle="bold" />
 
                     <TextView
@@ -99,7 +99,7 @@
                         android:layout_marginLeft="5dp"
                         android:paddingRight="6dp"
                         android:text="01/07/2019"
-                        android:textSize="15sp"
+                        android:textSize="10sp"
                         android:textStyle="bold" />
 
                     <TextView
@@ -108,7 +108,7 @@
                         android:layout_marginLeft="5dp"
                         android:paddingRight="6dp"
                         android:text="Time :"
-                        android:textSize="15sp"
+                        android:textSize="10sp"
                         android:textStyle="bold" />
 
                     <TextView
@@ -117,7 +117,7 @@
                         android:layout_height="wrap_content"
                         android:paddingRight="16dp"
                         android:text="12:04 PM"
-                        android:textSize="15sp"
+                        android:textSize="10sp"
                         android:textStyle="bold" />
 
 
