--- a/app/src/main/res/layout/activity_food_app.xml
+++ b/app/src/main/res/layout/activity_food_app.xml
@@ -54,6 +54,8 @@
                 android:textSize="14sp"
 
                 />
+
+
             <TextView
                 android:id="@+id/tv_delivery_address"
                 android:layout_width="250dp"
@@ -68,6 +70,8 @@
                 android:maxLines="1"
 
                 />
+
+
             <ImageView
                 android:layout_width="20dp"
                 android:layout_height="20dp"
@@ -92,16 +96,16 @@
             android:id="@+id/tabLayoutId"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:clipToPadding="true"
+            android:clipToPadding="false"
 
             android:background="@android:color/white"
             android:elevation="10dp"
             app:bubbleTab_circleColor="#ffcc00"
             app:bubbleTab_circleRatio="1.25"
-            app:bubbleTab_image0="@drawable/homeicon2"
-            app:bubbleTab_image1="@drawable/nearbyicon"
-            app:bubbleTab_image2="@drawable/recommendedicon2"
-            app:bubbleTab_image3="@drawable/freedeliveryicon"
+            app:bubbleTab_image0="@drawable/foodhome_demo_icon2"
+            app:bubbleTab_image1="@drawable/nearby_demo_icon4"
+            app:bubbleTab_image2="@drawable/popular_demo_icon2"
+            app:bubbleTab_image3="@drawable/freedelivery_demo_icon2"
 
        />
 
@@ -225,6 +229,7 @@
 
     </android.support.v4.widget.NestedScrollView>-->
     <!-- include bottom sheet -->
+
     <TextView
         android:id="@+id/tv_search_text"
         android:layout_width="wrap_content"
