--- a/app/src/main/res/layout/recycleview_history_page_design.xml
+++ b/app/src/main/res/layout/recycleview_history_page_design.xml
@@ -5,40 +5,36 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
+    android:gravity="center"
     tools:context=".HistoryPage">
+
 
     <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:elevation="10dp"
         android:layout_marginBottom="10dp">
-        <RelativeLayout
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="120dp"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="horizontal"
             android:layout_margin="10dp">
 
             <ImageView
                 android:id="@+id/logo_image"
                 android:layout_width="80dp"
-                android:layout_height="90dp"
-                android:layout_marginRight="10dp"
-                android:layout_marginTop="5dp"
+                android:layout_height="80dp"
+                android:layout_marginRight="20dp"
                 android:src="@drawable/foodicon"
                 android:background="@drawable/friendlist_icon_bg" />
 
             <LinearLayout
-                android:layout_width="295dp"
-                android:layout_height="107dp"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentBottom="true"
-                android:layout_marginTop="3dp"
-                android:layout_marginEnd="0dp"
-                android:layout_marginRight="0dp"
-                android:layout_marginBottom="0dp"
-                android:layout_toRightOf="@+id/list_icon"
+                android:layout_width="285dp"
+                android:layout_height="wrap_content"
                 android:background="@drawable/friendlist_name_bg"
-                android:gravity="center_vertical"
+                android:gravity="left"
                 android:orientation="vertical">
 
                 <TextView
@@ -51,10 +47,10 @@
                     android:id="@+id/tv_restaurant_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
+
                     android:paddingRight="16dp"
                     android:text="Kal Boishakhi"
-                    android:textSize="20sp"
+                    android:textSize="16sp"
                     android:textStyle="bold"
                     android:singleLine="true"
                     android:ellipsize="end"
@@ -66,10 +62,8 @@
                     android:id="@+id/tv_order_status"
                     android:layout_width="227dp"
                     android:layout_height="wrap_content"
-                    android:layout_margin="5dp"
-                    android:padding="5dp"
                     android:text="Order Delivered"
-                    android:textSize="20sp"
+                    android:textSize="14sp"
                     android:textStyle="bold" />
 
                 <LinearLayout
@@ -81,29 +75,27 @@
 
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="5dp"
                         android:paddingRight="6dp"
                         android:text="Date :"
-                        android:textSize="15sp"
+                        android:textSize="11sp"
                         android:textStyle="bold" />
 
                     <TextView
                         android:id="@+id/tv_order_date"
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="5dp"
                         android:paddingRight="6dp"
                         android:text="01/07/2019"
-                        android:textSize="15sp"
+                        android:textSize="11sp"
                         android:textStyle="bold" />
 
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="5dp"
+                        android:layout_marginLeft="10dp"
                         android:paddingRight="6dp"
                         android:text="Time :"
-                        android:textSize="15sp"
+                        android:textSize="11sp"
                         android:textStyle="bold" />
 
                     <TextView
@@ -112,7 +104,7 @@
                         android:layout_height="wrap_content"
                         android:paddingRight="16dp"
                         android:text="12:04 PM"
-                        android:textSize="15sp"
+                        android:textSize="11sp"
                         android:textStyle="bold" />
 
 
@@ -122,7 +114,7 @@
             </LinearLayout>
 
 
-        </RelativeLayout>
+        </LinearLayout>
 
     </com.google.android.material.card.MaterialCardView>
 
